force-app/main/default/objects/Case/fields/Batch__c.field-meta.xml
<CustomField>
    <fullName>Batch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The funding batch that the case relates</inlineHelpText>
    <label>Batch</label>
    <referenceTo>FundingBatch__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>