force-app/main/default/objects/Case/fields/Category_of_risk_areas__c.field-meta.xml
<CustomField>
    <fullName>Category_of_risk_areas__c</fullName>
    <label>Category of Risk</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Summary_of_Risk__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Money sent to the incorrect supplier</fullName>
            </value>
            <value>
                <fullName>Incorrect Amount sent to the supplier</fullName>
            </value>
            <value>
                <fullName>Collusion between Supplier and internal staff</fullName>
            </value>
            <value>
                <fullName>Incorrect expenditure (grant instead of co-funding)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Co-funding contribution amount paid from grant instead of Landlord/third party</fullName>
            </value>
            <value>
                <fullName>Collusion between Supplier and homeowner/landlord</fullName>
            </value>
            <value>
                <fullName>Ineligible Application - False information on the Application: Undeclared partners</fullName>
            </value>
            <value>
                <fullName>Ineligible Application - False information on the Application: Income</fullName>
            </value>
            <value>
                <fullName>Ineligible Application - False information on the Application: Benefit Receipt</fullName>
            </value>
            <value>
                <fullName>Ineligible Application - False information on the Application: Other</fullName>
            </value>
            <value>
                <fullName>Ineligible Application - Owner not occupier</fullName>
            </value>
            <value>
                <fullName>Ineligible Application - False information on the Application: False ID</fullName>
            </value>
            <value>
                <fullName>Ineligible Property - false information on the application</fullName>
            </value>
            <value>
                <fullName>Ineligible Property - falsified/incorrect EPC from pre-installation check</fullName>
            </value>
            <value>
                <fullName>Ineligible Property - non domestic</fullName>
            </value>
            <value>
                <fullName>Measure already Exists in the property</fullName>
            </value>
            <value>
                <fullName>Measure not compliant with standards/cannot be lodged</fullName>
            </value>
            <value>
                <fullName>Measures not installed</fullName>
            </value>
            <value>
                <fullName>Measure substitution (and substitution not compliant)</fullName>
            </value>
            <value>
                <fullName>Invoiced by both installer and retrofit co-ordinator</fullName>
            </value>
            <value>
                <fullName>Supplier invoice/proposal  - Charging for additional/cancelled work</fullName>
            </value>
            <value>
                <fullName>Supplier invoice/proposal  - for non existing enabling or ancillary work</fullName>
            </value>
            <value>
                <fullName>Supplier invoice/proposal  - Charging for incomplete measures</fullName>
            </value>
            <value>
                <fullName>Supplier invoice/proposal  - Charging for measures not installed</fullName>
            </value>
            <value>
                <fullName>Supplier invoice/proposal  - Charging for non-compliant measures</fullName>
            </value>
            <value>
                <fullName>Supplier invoice/proposal  - Charging incorrect amount</fullName>
            </value>
            <value>
                <fullName>Supplier invoice/proposal  - duplicate charging for measures/labour</fullName>
            </value>
            <value>
                <fullName>Supplier invoice/proposal  - VAT</fullName>
            </value>
            <value>
                <fullName>Supplier not accredited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>