force-app/main/default/objects/Case/fields/Feedback__c.field-meta.xml
<CustomField>
    <fullName>Feedback__c</fullName>
    <label>Feedback</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>