force-app/main/default/objects/Case/fields/Funding_Award_Performance_Management__c.field-meta.xml
<CustomField>
    <fullName>Funding_Award_Performance_Management__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Funding Performance Management Record</description>
    <label>Funding Award Performance Management</label>
    <referenceTo>Funding_Award_Performance_Management__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>