force-app/main/default/objects/Case/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fraud</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Non-Compliance</fullName>
            </value>
            <value>
                <fullName>Nil Value Procedural Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>