force-app/main/default/objects/Case/fields/Sub_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Sub_Type__c</fullName>
    <label>Sub Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sub_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Concerns about the fairness or relevance of Change Request decisions</fullName>
            </value>
            <value>
                <fullName>Concerns about the fairness or relevance of Clawback decisions</fullName>
            </value>
            <value>
                <fullName>Concerns about the fairness or relevance of Performance and DCA ratings</fullName>
            </value>
            <value>
                <fullName>Concerns about the fairness or relevance of Phase Request decisions</fullName>
            </value>
            <value>
                <fullName>Concerns about the fairness or relevance of Reconciliation outcomes</fullName>
            </value>
            <value>
                <fullName>Confusion or delays in Change Request submission decisions</fullName>
            </value>
            <value>
                <fullName>Confusion or delays in Phase Request submission decisions</fullName>
            </value>
            <value>
                <fullName>Lack of clarity or support to meet scheme requirements</fullName>
            </value>
            <value>
                <fullName>Problems with reporting or monitoring procedures</fullName>
            </value>
            <value>
                <fullName>Concerns about data accuracy or integrity</fullName>
            </value>
            <value>
                <fullName>Delays in data processing or feedback</fullName>
            </value>
            <value>
                <fullName>Incorrect or missing data fields</fullName>
            </value>
            <value>
                <fullName>Technical errors or access problems</fullName>
            </value>
            <value>
                <fullName>Confusion or delays in FENC decisions</fullName>
            </value>
            <value>
                <fullName>Inadequate FENC support or guidance</fullName>
            </value>
            <value>
                <fullName>Undue disruption due to audit activities</fullName>
            </value>
            <value>
                <fullName>Disputes over evaluation requirements or support</fullName>
            </value>
            <value>
                <fullName>Engagement issues with Evaluation contractor</fullName>
            </value>
            <value>
                <fullName>Issues with self-conducted evaluation activities</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Behavioural concerns or misconduct</fullName>
                <isActive>false</isActive>
                <label>Behavioural concerns or misconduct</label>
            </value>
            <value>
                <fullName>Failure to meet agreed timelines or milestones</fullName>
                <isActive>false</isActive>
                <label>Failure to meet agreed timelines or milestones</label>
            </value>
            <value>
                <fullName>Inadequate technical support or guidance</fullName>
                <isActive>false</isActive>
                <label>Inadequate technical support or guidance</label>
            </value>
            <value>
                <fullName>Non-compliance with agreed delivery standards or protocols</fullName>
                <isActive>false</isActive>
                <label>Non-compliance with agreed delivery standards or protocols</label>
            </value>
            <value>
                <fullName>Poor communication or responsiveness</fullName>
                <isActive>false</isActive>
                <label>Poor communication or responsiveness</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>