force-app/main/default/objects/Case/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <label>Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Evaluation and Learning Concerns</fullName>
            </value>
            <value>
                <fullName>Fraud, Error, and Non-Compliance Issues</fullName>
            </value>
            <value>
                <fullName>GMS (Grant Management System) and Data Issues</fullName>
            </value>
            <value>
                <fullName>Scheme Process and Operational Complaints</fullName>
            </value>
            <value>
                <fullName>Behavioural concerns or misconduct</fullName>
            </value>
            <value>
                <fullName>Failure to meet agreed timelines or milestones</fullName>
            </value>
            <value>
                <fullName>Inadequate technical support or guidance</fullName>
            </value>
            <value>
                <fullName>Non-compliance with agreed delivery standards or protocols</fullName>
            </value>
            <value>
                <fullName>Poor communication or responsiveness</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Delivery Partner Engagement Issues</fullName>
                <isActive>false</isActive>
                <label>Delivery Partner Engagement Issues</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>