force-app/main/default/objects/Case/fields/Summary_of_Risk__c.field-meta.xml
<CustomField>
    <fullName>Summary_of_Risk__c</fullName>
    <label>Summary of Risk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheme admin/administration</fullName>
            </value>
            <value>
                <fullName>Customer/Beneficiary/Applicant</fullName>
            </value>
            <value>
                <fullName>Property</fullName>
            </value>
            <value>
                <fullName>Measure/Installation</fullName>
            </value>
            <value>
                <fullName>Supplier</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>