force-app/main/default/objects/Case/recordTypes/Complaint.recordType-meta.xml
<RecordType>
    <fullName>Complaint</fullName>
    <active>true</active>
    <businessProcess>DESNZ Support Process</businessProcess>
    <description>Enables a complaint to be raised against a funding award</description>
    <label>Complaint</label>
</RecordType>