force-app/main/default/objects/Case/recordTypes/Complaint_About_Delivery_Partner.recordType-meta.xml
<RecordType>
    <fullName>Complaint_About_Delivery_Partner</fullName>
    <active>true</active>
    <businessProcess>DESNZ Support Process</businessProcess>
    <description>Complaint about a delivery partner</description>
    <label>Complaint About Delivery Partner</label>
</RecordType>