force-app/main/default/objects/Case/recordTypes/Direct_Advisory_Support.recordType-meta.xml
<RecordType>
    <fullName>Direct_Advisory_Support</fullName>
    <active>true</active>
    <businessProcess>DESNZ Support Process</businessProcess>
    <description>Request to the department about any issues or support needed for a Grant Recipient</description>
    <label>Direct Advisory Support</label>
</RecordType>