force-app/main/default/objects/Case/recordTypes/Message_Escalation.recordType-meta.xml
<RecordType>
    <fullName>Message_Escalation</fullName>
    <active>true</active>
    <businessProcess>Message Escalation</businessProcess>
    <description>The record type for chat message escalation cases</description>
    <label>Message Escalation</label>
</RecordType>