force-app/main/default/objects/Case/recordTypes/Open_Monthly_Update.recordType-meta.xml
<RecordType>
    <fullName>Open_Monthly_Update</fullName>
    <active>true</active>
    <businessProcess>DESNZ Support Process</businessProcess>
    <description>Request to open monthly update record to be able to make amendments</description>
    <label>Open Monthly Update</label>
</RecordType>