force-app/main/default/objects/Case/recordTypes/Performance.recordType-meta.xml
<RecordType>
    <fullName>Performance</fullName>
    <active>true</active>
    <businessProcess>Perfomance Query</businessProcess>
    <label>Performance</label>
</RecordType>