force-app/main/default/objects/Case/recordTypes/Record_Change.recordType-meta.xml
<RecordType>
    <fullName>Record_Change</fullName>
    <active>true</active>
    <businessProcess>DESNZ Support Process</businessProcess>
    <description>Request to make amendments to records</description>
    <label>Record Change</label>
</RecordType>