force-app/main/default/objects/Case/listViews/All_Cases_SHF.listView-meta.xml
<ListView>
    <fullName>All_Cases_SHF</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <filters>
        <field>Funding_Award__c</field>
        <operation>startsWith</operation>
        <value>SHF</value>
    </filters>
    <label>All Cases - SHF</label>
    <sharedTo>
        <group>Digital_Modus</group>
        <group>SHF_User</group>
    </sharedTo>
</ListView>