force-app/main/default/objects/Case/listViews/DESNZ_Delivery_Partner_Case.listView-meta.xml
<ListView>
    <fullName>DESNZ_Delivery_Partner_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>DESNZ Delivery Partner</label>
    <queue>DESNZ_Delivery_Partner</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>