force-app/main/default/objects/Case/listViews/DESNZ_Scheme_Lead_Case.listView-meta.xml
<ListView>
    <fullName>DESNZ_Scheme_Lead_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>DESNZ Scheme Lead</label>
    <queue>DESNZ_Scheme_Lead</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>