force-app/main/default/objects/Case/listViews/Fraud_and_Error.listView-meta.xml
<ListView>
    <fullName>Fraud_and_Error</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.REASON</columns>
    <columns>Summary_of_Risk__c</columns>
    <columns>Category_of_risk_areas__c</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CASES.STATUS</columns>
    <columns>Outcome__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Direct_Advisory_Support</value>
    </filters>
    <label>Fraud and Error</label>
</ListView>