force-app/main/default/objects/Case/listViews/Message_Escalations.listView-meta.xml
<ListView>
    <fullName>Message_Escalations</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Funding_Award__c</columns>
    <columns>CASES.TYPE</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.STATUS</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Message_Escalation</value>
    </filters>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>notEqual</operation>
        <value>1</value>
    </filters>
    <label>Message Escalations</label>
</ListView>