force-app/main/default/objects/Case/listViews/Message_Escalations_LG.listView-meta.xml
<ListView>
    <fullName>Message_Escalations_LG</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Funding_Award__c</columns>
    <columns>CASES.TYPE</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.STATUS</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Message_Escalation</value>
    </filters>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>notEqual</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Funding_Award__c</field>
        <operation>startsWith</operation>
        <value>WHLG</value>
    </filters>
    <label>Message Escalations - LG</label>
    <sharedTo>
        <group>Digital_Modus</group>
        <group>Local_Grant_User</group>
    </sharedTo>
</ListView>