force-app/main/default/objects/Case/listViews/Monthly_Update_Cases.listView-meta.xml
<ListView>
    <fullName>Monthly_Update_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.RECORDTYPE</columns>
    <columns>Funding_Award__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Open_Monthly_Update</value>
    </filters>
    <label>Monthly Update Cases</label>
</ListView>