force-app/main/default/objects/Case/listViews/My_Complaint_Cases.listView-meta.xml
<ListView>
    <fullName>My_Complaint_Cases</fullName>
    <booleanFilter>(1 AND 4) OR (2 AND 3 AND 4)</booleanFilter>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Record_Type_Name__c</field>
        <operation>equals</operation>
        <value>Complaint</value>
    </filters>
    <filters>
        <field>Record_Type_Name__c</field>
        <operation>equals</operation>
        <value>Message Escalation</value>
    </filters>
    <filters>
        <field>CASES.TYPE</field>
        <operation>equals</operation>
        <value>Complaint</value>
    </filters>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>My Complaint Cases</label>
</ListView>