force-app/main/default/objects/Case/listViews/My_Open_Cases_and_Requests.listView-meta.xml
<ListView>
    <fullName>My_Open_Cases_and_Requests</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.RECORDTYPE</columns>
    <columns>CASES.TYPE</columns>
    <columns>Funding_Award__c</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>OWNER_NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>notEqual</operation>
        <value>1</value>
    </filters>
    <label>My Open Cases and Requests</label>
</ListView>