force-app/main/default/objects/Case/listViews/Record_Change_Cases.listView-meta.xml
<ListView>
    <fullName>Record_Change_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.TYPE</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Funding_Award__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Record_Change</value>
    </filters>
    <label>Record Change Cases</label>
</ListView>